@@ -9,6 +9,7 @@
                  [com.novemberain/langohr "5.0.0"]
                  [com.fzakaria/slf4j-timbre "0.3.8"]]
   :dev-dependencies [[lein-cljfmt "0.5.7"]]
+  :jvm-opts ["--add-modules" "java.xml.bind"]
   :main ^:skip-aot demopar.core
   :target-path "target/%s"
   :profiles {:uberjar {:aot :all}})
